After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752929 - vaapidecode: don't lost GLTextureUpload on seek
vaapidecode: don't lost GLTextureUpload on seek
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
: 753567 (view as bug list)
Depends on:
Blocks: 750547 754843
 
 
Reported: 2015-07-27 17:08 UTC by Víctor Manuel Jáquez Leal
Modified: 2015-09-10 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapidecode: don't lost GLTextureUpload on seek (1.23 KB, patch)
2015-07-27 17:08 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2015-07-27 17:08:30 UTC
When seeking, the decoder is reset, but the buffer pool is not
re-negotiated, but in reset_full() the code forgets if the negotiated buffer
pool has the GLTextureUpload meta.

The decoder knows that GLTextureUpload meta was negotiated in
decide_allocation(), but this method is not called when seeking.

Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>
Comment 1 Víctor Manuel Jáquez Leal 2015-07-27 17:08:34 UTC
Created attachment 308234 [details] [review]
vaapidecode: don't lost GLTextureUpload on seek
Comment 2 Víctor Manuel Jáquez Leal 2015-08-04 17:22:22 UTC
Attachment 308234 [details] pushed as b601bf0 - vaapidecode: don't lost GLTextureUpload on seek
Comment 3 Víctor Manuel Jáquez Leal 2015-08-25 17:10:30 UTC
*** Bug 753567 has been marked as a duplicate of this bug. ***